--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.23", features = ["derive"] }
 serde = "1.0.186"
+serde_cbor = "0.11.2"
+serde_derive = "1.0.188"
