--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kifi"
-version = "0.2.1-alpha"
+version = "0.2.2-alpha"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +10,4 @@ clap = { version = "4.3.23", features = ["derive"] }
 serde = "1.0.186"
 serde_cbor = "0.11.2"
 serde_derive = "1.0.188"
+slice-diff-patch = "1.2.1"
