--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kifi"
-version = "0.4.1-alpha"
+version = "0.4.2-alpha"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.23", features = ["derive"] }
 dirs = "5.0.1"
+glob = "0.3.1"
 regex = "1.10.2"
 serde = "1.0.186"
 serde_cbor = "0.11.2"
