--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kifi"
-version = "0.4.2-alpha"
+version = "0.4.3-alpha"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.23", features = ["derive"] }
 dirs = "5.0.1"
+fs_extra = "1.3.0"
 glob = "0.3.1"
 regex = "1.10.2"
 serde = "1.0.186"
 serde_cbor = "0.11.2"
 serde_derive = "1.0.188"
 slice-diff-patch = "1.2.1"
+time = { version = "0.3.30", features = ["formatting"] }
